--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@apollo/client": "^3.9.7",
+    "formik": "^2.4.5",
     "graphql": "^16.8.1",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-loader-spinner": "^6.1.6",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
