--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ yarn-error.log*
 # local env files
 .env
 .env*.local
-.env.prod
+.env*.prod
 
 # vercel
 .vercel
@@ -37,4 +37,4 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-dist
+dist/
