--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.9.7",
+    "@clerk/nextjs": "^5.0.6",
+    "@tanstack/react-query": "^5.35.1",
     "formik": "^2.4.5",
     "graphql": "^16.8.1",
     "next": "14.1.3",
