--- a/client/package.json
+++ b/client/package.json
@@ -10,18 +10,19 @@
   },
   "dependencies": {
     "@apollo/client": "^3.9.7",
-    "formik": "^2.4.5",
+    "@clerk/nextjs": "^4.29.12",
     "@hookform/resolvers": "^3.3.4",
     "axios": "^1.6.8",
-    "firebase": "^10.9.0",
+    "firebase": "^10.10.0",
+    "formik": "^2.4.5",
     "graphql": "^16.8.1",
     "next": "14.1.3",
     "nodemailer": "^6.9.13",
     "react": "^18",
+    "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
     "yup": "^1.4.0",
-    "react-hook-form": "^7.51.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
