--- a/server/package.json
+++ b/server/package.json
@@ -21,10 +21,12 @@
   },
   "dependencies": {
     "@apollo/server": "^4.10.1",
+    "@clerk/clerk-sdk-node": "^4.13.14",
     "@hookform/resolvers": "^3.3.4",
     "@nestjs-modules/mailer": "^1.10.3",
     "@nestjs/apollo": "^12.1.0",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/event-emitter": "^2.0.4",
     "@nestjs/graphql": "^12.1.1",
@@ -37,7 +39,9 @@
     "@prisma/client": "^5.11.0",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "graphql": "^16.8.1",
     "graphql-tools": "^9.0.1",
     "ioredis": "^5.3.2",
@@ -49,6 +53,7 @@
     "react-hook-form": "^7.51.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "stream-chat": "^8.25.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
