--- a/client/package.json
+++ b/client/package.json
@@ -11,14 +11,24 @@
   "dependencies": {
     "@apollo/client": "^3.9.7",
     "@clerk/nextjs": "^4.29.12",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.35.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "formik": "^2.4.5",
     "graphql": "^16.8.1",
+    "input-otp": "^1.2.4",
+    "lucide-react": "^0.378.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "yup": "^1.4.0"
   },
   "devDependencies": {
