--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,12 @@
     "@apollo/client": "^3.9.7",
     "@clerk/nextjs": "^4.29.12",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^5.35.1",
     "class-variance-authority": "^0.7.0",
@@ -25,6 +28,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.378.0",
     "next": "14.1.3",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
