--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,19 @@
             "name": "healthlink",
             "database": "health_link_test1db",
             "username": "root"
+        },
+        {
+            "mysqlOptions": {
+                "authProtocol": "default",
+                "enableSsl": "Disabled"
+            },
+            "previewLimit": 50,
+            "server": "172.20.0.3",
+            "port": 3306,
+            "driver": "MySQL",
+            "name": "Health_link",
+            "database": "Health_link_db",
+            "username": "root"
         }
     ]
 }
