--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "firebase": "^10.12.0",
     "formik": "^2.4.5",
     "graphql": "^16.8.1",
     "input-otp": "^1.2.4",
