--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@100mslive/server-sdk": "^0.0.1",
+    "@100mslive/server-sdk": "^0.3.0",
     "@apollo/server": "^4.10.1",
     "@clerk/clerk-sdk-node": "^5.0.7",
     "@hookform/resolvers": "^3.3.4",
@@ -35,12 +35,14 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.3.4",
+    "@nestjs/schedule": "^4.0.2",
     "@nestjs/websockets": "^10.3.4",
     "@prisma/client": "^5.14.0",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "graphql": "^16.8.1",
