--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,10 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Ignore Python byte-code files, which are created by the Python interpreter
+*.pyc
+__pycache__/
+
+# Ignore the virtual environment directory
+client/api/venv/
