--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@100mslive/react-sdk": "^0.10.11",
     "@apollo/client": "^3.9.7",
     "@clerk/nextjs": "^4.29.12",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -36,10 +37,10 @@
     "lucide-react": "^0.378.0",
     "next": "14.1.3",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
-    "nodemailer": "^6.9.13",
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
