--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@100mslive/react-sdk": "^0.10.11",
     "@apollo/client": "^3.9.7",
     "@clerk/nextjs": "^4.29.12",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
@@ -32,6 +33,7 @@
     "date-fns": "^3.6.0",
     "firebase": "^10.12.0",
     "formik": "^2.4.5",
+    "framer-motion": "^11.2.10",
     "graphql": "^16.8.1",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.378.0",
