--- a/client/package.json
+++ b/client/package.json
@@ -44,8 +44,11 @@
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
+    "stream-chat": "^8.33.0",
+    "stream-chat-react": "^11.19.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "tinymce": "^7.1.1",
     "yup": "^1.4.0",
     "zustand": "^4.5.2"
   },
