--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "@apollo/server": "^4.10.1",
     "@clerk/clerk-sdk-node": "^5.0.7",
     "@hookform/resolvers": "^3.3.4",
+    "@nestjs-modules/ioredis": "^2.0.2",
     "@nestjs/apollo": "^12.1.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
@@ -39,6 +40,7 @@
     "@nestjs/websockets": "^10.3.4",
     "@prisma/client": "^5.14.0",
     "axios": "^1.6.8",
+    "axios-retry": "^4.3.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "date-fns": "^3.6.0",
@@ -47,7 +49,7 @@
     "express": "^4.19.2",
     "graphql": "^16.8.1",
     "graphql-tools": "^9.0.1",
-    "ioredis": "^5.3.2",
+    "ioredis": "^5.4.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
