--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
+    "react-quill": "^2.0.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.4.0",
