doctor dashboard analytics

--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,9 @@
     "@100mslive/react-sdk": "^0.10.11",
     "@apollo/client": "^3.9.7",
     "@clerk/nextjs": "^4.29.12",
+    "@nivo/bar": "^0.87.0",
+    "@nivo/core": "^0.87.0",
+    "@nivo/line": "^0.87.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
