--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.1.5",
     "firebase": "^10.12.0",
     "formik": "^2.4.5",
     "framer-motion": "^11.2.10",
