--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@100mslive/react-sdk": "^0.10.11",
     "@apollo/client": "^3.9.7",
-    "@clerk/nextjs": "^4.29.12",
+    "@hookform/resolvers": "^3.9.1",
     "@nivo/bar": "^0.87.0",
     "@nivo/core": "^0.87.0",
     "@nivo/line": "^0.87.0",
@@ -20,21 +20,21 @@
     "@radix-ui/react-checkbox": "^1.1.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slider": "^1.1.2",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^5.35.1",
     "@tensorflow/tfjs": "^4.19.0",
-    "axios": "^1.7.2",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -43,29 +43,29 @@
     "dompurify": "^3.1.6",
     "embla-carousel-react": "^8.1.5",
     "firebase": "^10.12.0",
-    "formik": "^2.4.5",
     "framer-motion": "^11.2.10",
     "graphql": "^16.8.1",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.378.0",
-    "next": "14.1.3",
+    "next": "^14.2.21",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.51.2",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
-    "react-quill": "^2.0.0",
     "socket.io-client": "^4.7.5",
     "stream-chat": "^8.33.0",
     "stream-chat-react": "^11.19.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tinymce": "^7.1.1",
+    "webrtc-adapter": "^9.0.1",
     "yup": "^1.4.0",
+    "zod": "^3.24.1",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
