--- a/server/package.json
+++ b/server/package.json
@@ -40,19 +40,21 @@
     "@nestjs/schedule": "^4.0.2",
     "@nestjs/websockets": "^10.3.4",
     "@prisma/client": "^5.14.0",
-    "axios": "^1.6.8",
+    "axios": "^1.7.9",
     "axios-retry": "^4.3.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.2",
     "graphql": "^16.8.1",
     "graphql-tools": "^9.0.1",
     "ioredis": "^5.4.1",
+    "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.14",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "puppeteer": "^22.10.0",
@@ -73,6 +75,7 @@
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
+    "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.0",
