--- a/client/package.json
+++ b/client/package.json
@@ -46,17 +46,20 @@
     "framer-motion": "^11.2.10",
     "graphql": "^16.8.1",
     "input-otp": "^1.2.4",
+    "libphonenumber-js": "^1.11.17",
     "lucide-react": "^0.378.0",
     "next": "^14.2.21",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
     "react": "^18",
+    "react-datepicker": "^7.5.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
+    "react-phone-number-input": "^3.4.10",
     "socket.io-client": "^4.7.5",
     "stream-chat": "^8.33.0",
     "stream-chat-react": "^11.19.0",
