--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,7 @@
     "@clerk/clerk-sdk-node": "^5.0.7",
     "@hookform/resolvers": "^3.3.4",
     "@nestjs-modules/ioredis": "^2.0.2",
-    "@nestjs-modules/mailer": "^2.0.2",
+    "@nestjs-modules/mailer": "^1.11.2",
     "@nestjs/apollo": "^12.1.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
@@ -52,7 +52,9 @@
     "graphql-tools": "^9.0.1",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^6.9.14",
+    "mjml": "^4.15.3",
+    "nodemailer": "^6.9.16",
+    "otpauth": "^9.3.6",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
@@ -75,6 +77,7 @@
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.17",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
@@ -84,6 +87,7 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "html-minifier-terser": "^7.2.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "prisma": "^5.14.0",
